// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkHeading overview 0 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1:hover a {
  visibility: visible;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  margin: auto;
  top: 0;
  bottom: 0;
  height: 32px;
  visibility: hidden;
  padding-right: 4px;
  left: -32px;
}

.emotion-2:hover {
  visibility: visible;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: medium-content-title-font,Georgia,Cambria,"Times New Roman",Times,serif;
  font-weight: 600;
  line-height: 1.25;
  font-family: medium-content-title-font,Georgia,Cambria,"Times New Roman",Times,serif;
  line-height: 1.25;
  font-weight: 600;
  font-size: 42px;
  margin-top: 32px;
  margin-bottom: 32px;
}

<div
    style="margin-left: 32px;"
  >
    <div
      class="emotion-0"
      id="angelica-howell"
    >
      <div
        class="emotion-1"
      >
        <a
          aria-label="navigate to navigate to angelica-howell section"
          class="emotion-2"
          data-id="angelica-howell"
          data-level="1"
          data-title="navigate to angelica-howell"
          href="http://localhost/#angelica-howell"
        >
          <svg
            aria-hidden="true"
            class="octicon"
            fill="currentColor"
            height="28"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: middle;"
            viewBox="0 0 24 24"
            width="28"
          >
            <path
              d="M14.78 3.653a3.936 3.936 0 115.567 5.567l-3.627 3.627a3.936 3.936 0 01-5.88-.353.75.75 0 00-1.18.928 5.436 5.436 0 008.12.486l3.628-3.628a5.436 5.436 0 10-7.688-7.688l-3 3a.75.75 0 001.06 1.061l3-3z"
            />
            <path
              d="M7.28 11.153a3.936 3.936 0 015.88.353.75.75 0 001.18-.928 5.436 5.436 0 00-8.12-.486L2.592 13.72a5.436 5.436 0 107.688 7.688l3-3a.75.75 0 10-1.06-1.06l-3 3a3.936 3.936 0 01-5.567-5.568l3.627-3.627z"
            />
          </svg>
        </a>
        <h1
          class="emotion-3"
        >
          Angelica Howell
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LinkHeading overview 1 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1:hover a {
  visibility: visible;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  margin: auto;
  top: 0;
  bottom: 0;
  height: 32px;
  visibility: hidden;
  padding-right: 4px;
  left: -16px;
}

.emotion-2:hover {
  visibility: visible;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: medium-content-title-font,Georgia,Cambria,"Times New Roman",Times,serif;
  font-weight: 600;
  line-height: 1.25;
  font-family: medium-content-title-font,Georgia,Cambria,"Times New Roman",Times,serif;
  line-height: 1.25;
  font-weight: 600;
  font-size: 12px;
  margin-top: 8px;
  margin-bottom: 8px;
}

<div
    style="margin-left: 32px;"
  >
    <div
      class="emotion-0"
      id="mrs--rosalyn-moen"
    >
      <div
        class="emotion-1"
      >
        <a
          aria-label="navigate to navigate to mrs--rosalyn-moen section"
          class="emotion-2"
          data-id="mrs--rosalyn-moen"
          data-level="6"
          data-title="navigate to mrs--rosalyn-moen"
          href="http://localhost/#mrs--rosalyn-moen"
        >
          <svg
            aria-hidden="true"
            class="octicon"
            fill="currentColor"
            height="12"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: middle;"
            viewBox="0 0 16 16"
            width="12"
          >
            <path
              d="M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z"
              fill-rule="evenodd"
            />
          </svg>
        </a>
        <h6
          class="emotion-3"
        >
          Mrs. Rosalyn Moen
        </h6>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LinkHeading overview 2 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1:hover a {
  visibility: visible;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  margin: auto;
  top: 0;
  bottom: 0;
  height: 32px;
  visibility: hidden;
  padding-right: 4px;
  left: -32px;
}

.emotion-2:hover {
  visibility: visible;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: medium-content-title-font,Georgia,Cambria,"Times New Roman",Times,serif;
  font-weight: 600;
  line-height: 1.25;
  font-family: medium-content-title-font,Georgia,Cambria,"Times New Roman",Times,serif;
  line-height: 1.25;
  font-weight: 600;
  font-size: 42px;
  margin-top: 32px;
  margin-bottom: 32px;
}

<div
    style="margin-left: 32px;"
  >
    <div
      class="emotion-0"
      id="stuart-rutherford"
    >
      <div
        class="emotion-1"
      >
        <a
          aria-label="navigate to navigate to stuart-rutherford section"
          class="emotion-2"
          data-id="stuart-rutherford"
          data-level="1"
          data-title="navigate to stuart-rutherford"
          href="http://localhost/#stuart-rutherford"
        >
          <svg
            aria-hidden="true"
            class="octicon"
            fill="currentColor"
            height="28"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: middle;"
            viewBox="0 0 24 24"
            width="28"
          >
            <path
              d="M14.78 3.653a3.936 3.936 0 115.567 5.567l-3.627 3.627a3.936 3.936 0 01-5.88-.353.75.75 0 00-1.18.928 5.436 5.436 0 008.12.486l3.628-3.628a5.436 5.436 0 10-7.688-7.688l-3 3a.75.75 0 001.06 1.061l3-3z"
            />
            <path
              d="M7.28 11.153a3.936 3.936 0 015.88.353.75.75 0 001.18-.928 5.436 5.436 0 00-8.12-.486L2.592 13.72a5.436 5.436 0 107.688 7.688l3-3a.75.75 0 10-1.06-1.06l-3 3a3.936 3.936 0 01-5.567-5.568l3.627-3.627z"
            />
          </svg>
        </a>
        <h1
          class="emotion-3"
        >
          Stuart Rutherford
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LinkHeading overview 3 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1:hover a {
  visibility: visible;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  margin: auto;
  top: 0;
  bottom: 0;
  height: 32px;
  visibility: hidden;
  padding-right: 4px;
  left: -30px;
}

.emotion-2:hover {
  visibility: visible;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: medium-content-title-font,Georgia,Cambria,"Times New Roman",Times,serif;
  font-weight: 600;
  line-height: 1.25;
  font-family: medium-content-title-font,Georgia,Cambria,"Times New Roman",Times,serif;
  line-height: 1.25;
  font-weight: 600;
  font-size: 32px;
  margin-top: 16px;
  margin-bottom: 16px;
  border-bottom: 4px solid #454f5b;
  width: 100%;
}

<div
    style="margin-left: 32px;"
  >
    <div
      class="emotion-0"
      id="miss-litzy-bergnaum"
    >
      <div
        class="emotion-1"
      >
        <a
          aria-label="navigate to navigate to miss-litzy-bergnaum section"
          class="emotion-2"
          data-id="miss-litzy-bergnaum"
          data-level="2"
          data-title="navigate to miss-litzy-bergnaum"
          href="http://localhost/#miss-litzy-bergnaum"
        >
          <svg
            aria-hidden="true"
            class="octicon"
            fill="currentColor"
            height="26"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: middle;"
            viewBox="0 0 24 24"
            width="26"
          >
            <path
              d="M14.78 3.653a3.936 3.936 0 115.567 5.567l-3.627 3.627a3.936 3.936 0 01-5.88-.353.75.75 0 00-1.18.928 5.436 5.436 0 008.12.486l3.628-3.628a5.436 5.436 0 10-7.688-7.688l-3 3a.75.75 0 001.06 1.061l3-3z"
            />
            <path
              d="M7.28 11.153a3.936 3.936 0 015.88.353.75.75 0 001.18-.928 5.436 5.436 0 00-8.12-.486L2.592 13.72a5.436 5.436 0 107.688 7.688l3-3a.75.75 0 10-1.06-1.06l-3 3a3.936 3.936 0 01-5.567-5.568l3.627-3.627z"
            />
          </svg>
        </a>
        <h2
          class="emotion-3"
        >
          Miss Litzy Bergnaum
        </h2>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LinkHeading overview 4 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1:hover a {
  visibility: visible;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  margin: auto;
  top: 0;
  bottom: 0;
  height: 32px;
  visibility: hidden;
  padding-right: 4px;
  left: -32px;
}

.emotion-2:hover {
  visibility: visible;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: medium-content-title-font,Georgia,Cambria,"Times New Roman",Times,serif;
  font-weight: 600;
  line-height: 1.25;
  font-family: medium-content-title-font,Georgia,Cambria,"Times New Roman",Times,serif;
  line-height: 1.25;
  font-weight: 600;
  font-size: 42px;
  margin-top: 32px;
  margin-bottom: 32px;
}

<div
    style="margin-left: 32px;"
  >
    <div
      class="emotion-0"
      id="dr--dariana-murray"
    >
      <div
        class="emotion-1"
      >
        <a
          aria-label="navigate to navigate to dr--dariana-murray section"
          class="emotion-2"
          data-id="dr--dariana-murray"
          data-level="1"
          data-title="navigate to dr--dariana-murray"
          href="http://localhost/#dr--dariana-murray"
        >
          <svg
            aria-hidden="true"
            class="octicon"
            fill="currentColor"
            height="28"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: middle;"
            viewBox="0 0 24 24"
            width="28"
          >
            <path
              d="M14.78 3.653a3.936 3.936 0 115.567 5.567l-3.627 3.627a3.936 3.936 0 01-5.88-.353.75.75 0 00-1.18.928 5.436 5.436 0 008.12.486l3.628-3.628a5.436 5.436 0 10-7.688-7.688l-3 3a.75.75 0 001.06 1.061l3-3z"
            />
            <path
              d="M7.28 11.153a3.936 3.936 0 015.88.353.75.75 0 001.18-.928 5.436 5.436 0 00-8.12-.486L2.592 13.72a5.436 5.436 0 107.688 7.688l3-3a.75.75 0 10-1.06-1.06l-3 3a3.936 3.936 0 01-5.567-5.568l3.627-3.627z"
            />
          </svg>
        </a>
        <h1
          class="emotion-3"
        >
          Dr. Dariana Murray
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
